--- a/src/app/produits/produits.component.html
+++ b/src/app/produits/produits.component.html
@@ -1,1 +1,22 @@
-<p>produits works!</p>
+<div>
+  <h1> liste des produits </h1>
+  <!-- <app-entete></app-entete> -->
+  <table>
+    <thead>
+      <tr>
+        <th> Id </th>
+        <th> Code </th>
+        <th> Designation </th>
+        <th> Prix </th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let p of produits">
+        <td> {{p.id}}</td>
+        <td> {{p.code}}</td>
+        <td> {{p.designation}}</td>
+        <td> {{p.prix}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
