--- a/src/app/produits/produits.component.html
+++ b/src/app/produits/produits.component.html
@@ -1,15 +1,48 @@
-<!-- produits.component.html -->
 <div>
-  <h1> Liste des produits </h1>
-
+  <h1> Fiche Produit </h1>
+  <form #produitForm="ngForm" (ngSubmit)="validerFormulaire(produitForm)">
+    <table>
+      <tr>
+        <td> Id: </td>
+        <td>
+          <input id="id" name="id" type="text" [(ngModel)]="produitCourant.id" required />
+        </td>
+      </tr>
+      <tr>
+        <td> Code: </td>
+        <td>
+          <input type ="text" name="code" [(ngModel)]="produitCourant.code"/>
+          </td>
+      </tr>
+      <tr>
+        <td> Désignation: </td>
+        <td><input type ="text" name="designation" [(ngModel)]="produitCourant.designation"/> </td>
+      </tr>
+      <tr>
+        <td> Prix: </td>
+        <td>
+          <input type ="text" name="prix" [(ngModel)]="produitCourant.prix"/>
+        </td>
+      </tr>
+      <tr>
+        <td [align]="'center'" colspan="2">
+          <input type="submit" value="Valider" [disabled]="!produitForm.form.valid" />
+          <button (click)="annulerSaisie()">Effacer</button>
+        </td>
+      </tr>
+    </table>
+  </form>
+</div>
+<div>
+  <h1> liste des produits </h1>
   <table>
     <thead>
       <tr>
         <th> Id </th>
-        <th> Code </th>
-        <th> Designation </th>
-        <th> Prix </th>
-        <th> Actions </th>
+        <th>Code</th>
+        <th>Designation</th>
+        <th>Prix</th>
+        <th colspan="2">Actions</th>
       </tr>
     </thead>
     <tbody>
@@ -19,27 +52,16 @@
         <td> {{p.designation}}</td>
         <td> {{p.prix}}</td>
         <td>
-          <button (click)="editerProduit(p)">Éditer</button>
-          <button (click)="supprimerProduit(p)">Supprimer</button>
+          <button (click)="editerProduit(p)">
+            Editer
+          </button>
+        </td>
+        <td>
+          <button (click)="supprimerProduit(p)">
+            Supprimer
+          </button>
         </td>
       </tr>
     </tbody>
   </table>
-
-  <div *ngIf="produitEnEdition">
-    <h2>{{produitEnEdition.id ? 'Modifier' : 'Ajouter'}} un produit</h2>
-<form (submit)="produitEnEdition.id ? mettreAJourProduit($event) : ajouterProduit($event)">
-  <label for="id">Id:</label>
-  <input type="text" id="id" [(ngModel)]="nouveauProduit.id" required [ngModelOptions]="{standalone: true}">
-  <label for="code">Code:</label>
-  <input type="text" id="code" [(ngModel)]="nouveauProduit.code" required [ngModelOptions]="{standalone: true}">
-  <label for="designation">Désignation:</label>
-  <input type="text" id="designation" [(ngModel)]="nouveauProduit.designation" required [ngModelOptions]="{standalone: true}">
-  <label for="prix">Prix:</label>
-  <input type="number" id="prix" [(ngModel)]="nouveauProduit.prix" required [ngModelOptions]="{standalone: true}">
-  <button type="submit">{{produitEnEdition.id ? 'Mettre à jour' : 'Ajouter'}}</button>
-  <button type="button" (click)="annulerEdition()">Annuler</button>
-</form>
-
-  </div>
 </div>
